# Path-Tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: camera.h  color.h  global.h  hittable-list.h  interval.h  material.h  ray.h  render_object.h  sphere.h  thread-manager.h  util.h  vec3.h
lib/: TinyPngOut.cc
src/: camera.cc  main.cc  sphere.cc
